--- a/bio.html
+++ b/bio.html
@@ -11,24 +11,36 @@
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="nav-bar">
-        <div class="nav-container">
+    <div class="nav-bar">
+      <div class="nav-container">
+        <div class="logo">
           <div class="logo">
-            <div class="logo">
-              <a href="index.html">
-                <h1>fito segrera</h1>
-              </a>
-            </div>
+            <a href="index.html">
+              <h1>fito segrera</h1>
+            </a>
           </div>
-          <nav class="menu">
-            <a class="menu-item" href="bio.html">Bio</a>
-            <a class="menu-item" href="proyectos.html">Proyectos</a>
-            <a class="menu-item" href="contacto.html">Contacto</a>
-          </nav>
+        </div>
+        <nav class="menu">
+          <a class="menu-item" href="bio.html">Bio</a>
+          <a class="menu-item" href="proyectos.html">Proyectos</a>
+          <a class="menu-item" href="contacto.html">Contacto</a>
+        </nav>
+      </div>
+    </div>
+    <div class="container">
+      <div class="hero">
+        <div class="hero-container">
+          <div class="bio">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </div>
         </div>
       </div>
-      <h1>Bio</h1>
     </div>
   </body>
 </html>
